修复在 jdk21 下已经过时的写法